<resources>
    <string name="app_name">Whisker</string>
    <string name="start_recording">Start Recording</string>
    <string name="title_activity_start">Whisker</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string-array name="languages">
        <item>pl</item>
        <item>en</item>
        <item>de</item>
        <item>fr</item>
        <item>es</item>
    </string-array>
    <string name="select_language">Wybierz język</string>
    <string name="recordings">Recordings</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="history">History</string>
    <string name="live_transcription">Live transcription</string>
    <string name="we_re_getting_your_data">We\'re getting your data</string>
    <string name="record_transcription">Record Transcription</string>
    <string name="transcript">Transcript</string>
    <string name="hello">Hello</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="record_a_file_to_transcribe">Record a file to transcribe</string>
    <string name="choose_a_file_to_transcribe">Choose a file to transcribe</string>
    <string name="transcription">Transcription</string>
    <string name="transcription_will_be_here">Transcription will be here</string>
    <string name="translate">Translate</string>
    <string name="split_into_roles">Split into roles</string>
    <string name="discard">Discard</string>
    <string name="accept">Accept</string>
    <string name="original_text">Original text</string>
    <string name="translated_text">Translated text</string>
    <string name="save_record">Save Record?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="swipe_down_to_use_app_as_a_guest">Swipe down to use app as a guest</string>
    <string name="your_nick">Your nick (only letters and digits allowed)</string>
    <string name="password">Password (only letters and digits allowed)</string>
    <string name="repeat_password">Repeat password</string>
    <string name="rename_record">Rename Record?</string>
    <string name="save">Save</string>
    <string name="wrong_file_format">Wrong file format</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="about_whisker">
    Whisker is a simple transcription app that allows you to:\n\n
    - Record audio and transcribe it.\n
    - Select an audio file for transcription.\n
    - Transcribe live.\n\n
    With Whisker, you can also:\n
    - Translate transcriptions.\n
    - Edit and save transcription history.\n
    - Split transcriptions into roles.\n\n
    Powered by OpenAI\'s Whisper model for high accuracy.
    </string>
    <string name="login_failed_try_again">Login failed. Try again.</string>
    <string name="login_successful">Login successful!</string>
    <string name="registration_successful_you_can_now_log_in">Registration successful! You can now log in.</string>
    <string name="registration_failed_try_again">Registration failed. Try again.</string>
    <string name="passwords_do_not_match_please_try_again">Passwords do not match. Please try again.</string>
    <string name="please_log_in_to_view_history">Please log in to view history.</string>
    <string name="splitting_your_transcription">Splitting your transcription...</string>
    <string name="split_transcription_into_roles">Split transcription into roles</string>
    <string name="error_getting_transcription">Error getting transcription</string>
    <string name="are_you_sure_you_want_to_leave_you_will_lose_your_recording">Are you sure you want to leave? You will lose your recording.</string>
    <string name="server_available">Server available</string>
    <string name="server_unavailable_app_blocked">Server unavailable, app blocked</string>
    <string name="choose_transcription_language">Choose transcription language</string>
    <string name="is_being_transcribed">%1$s is being transcribed</string>
    <string name="only_letters_and_digits_allowed">Only letters and digits allowed</string>
    <string-array name="languages_full">
        <item>Polski</item>
        <item>English</item>
        <item>Deutsch</item>
        <item>Français</item>
        <item>Español</item>
    </string-array>
</resources>