<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetR"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@drawable/background_round"
    android:orientation="vertical"
    app:behavior_skipCollapsed="true"
    app:behavior_hideable="true">

    <TextView
        android:id="@+id/RbottomSheetTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/primaryDark"
        android:layout_marginTop="20dp"
        android:textSize="26sp"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/RbottomFirstUseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/swipe_down_to_use_app_as_a_guest"
        android:textColor="@color/primaryDark"
        android:textSize="12sp"
        android:textAlignment="center"/>



    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RegisterNickInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_nick"
            android:padding="16dp"
            android:imeOptions="actionNext"
            android:focusable="true"
            android:focusableInTouchMode="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RegisterPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/primaryDark"
            android:padding="16dp"
            android:imeOptions="actionNext"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="80dp">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelRegister"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/cancel"
            android:backgroundTint="@color/primaryLight"
            android:textColor="@color/primaryDark"
            app:cornerRadius="26dp"
            app:rippleColor="@color/primaryDark"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegisterIn"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/register"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/primaryDark"
            android:textColor="@color/primaryLight"
            app:cornerRadius="26dp"
            app:rippleColor="@color/primaryDark"/>
    </LinearLayout>

</LinearLayout>
